RESOLVED FIXED268695
BELayerHierarchy should be invalidated
https://bugs.webkit.org/show_bug.cgi?id=268695
Summary BELayerHierarchy should be invalidated
Per Arne Vollan
Reported 2024-02-03 09:12:24 PST
BELayerHierarchy should be invalidated before being deallocated.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-03 09:12:36 PST
Per Arne Vollan
Comment 2 2024-02-03 09:14:04 PST
EWS
Comment 3 2024-02-03 16:10:42 PST
Committed 274054@main (9f7a7a918cc5): <https://commits.webkit.org/274054@main> Reviewed commits have been landed. Closing PR #23810 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.