BELayerHierarchy should be invalidated https://bugs.webkit.org/show_bug.cgi?id=268695 rdar://122238284

Reviewed by Wenson Hsieh.

BELayerHierarchy should be invalidated before being deallocated.

* Source/WebKit/Platform/cocoa/LayerHostingContext.mm:
(WebKit::LayerHostingContext::~LayerHostingContext):

Canonical link: https://commits.webkit.org/274054@main